Fixed bugged caused by AOS Lib: overflow on the section elements, both on y and x directions.

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -21,6 +21,10 @@ body {
   }
 }
 
+section {
+  overflow: hidden;
+}
+
 p {
   font-size: 1.5rem;
   line-height: 1.5;
